[tool.poetry]
name = "sapp"
version = "0.5.0"
description = "Simple Application"
authors = ["Dominik Dlugajczyk <msocek@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
marshmallow_dataclass = "^8.0.0"
alembic = { version = "^1.0.9", optional = true }
sqlalchemy = { version = "^1.3.3", optional = true }
pyramid = { version = "^1.10.4", optional = true }
redis = { version = "^3.2.1", optional = true }
celery = { version = "^5.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = { version = "^6.0.1", optional = true }
pytest-cov = { version = "^2.10.1", optional = true }
pytest-mock = { version = "^3.2.0", optional = true }
ipython = { version = "^7.16.1", optional = true }
ipdb = { version = "^0.13.3", optional = true }

[tool.poetry.extras]
developer = [
    "alembic",
    "sqlalchemy",
    "pyramid",
    "redis",
    "celery",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ipython",
    "ipdb" ]

[tool.isort]
line_length = 80
known_first_party = [ "sapp" ]
multi_line_output=3
sections = [ "FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_single_line = true

[tool.black]
line_length = 80
target-version = [ 'py38' ]
ignore = [ "W503", "W504" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


